Fix images being cropped on very large screens
https://evanshunt.atlassian.net/browse/E2WU-171

--- a/styles/components/service-block.scss
+++ b/styles/components/service-block.scss
@@ -1,6 +1,8 @@
 .service-block {
   padding-top: 75px;
-  overflow: hidden;
+  @media (max-width: $tablet) {
+    overflow: hidden;
+  }
   @media (min-width: $tablet) {
     padding-top: 80px;
   }
